# molinuevosolar

./: .gitignore  LICENSE  README.md  VERSION  pyproject.toml  solar_power_plants.py
docs/: .buildinfo  api_reference.html  example.html  genindex.html  getting_started.html  index.html  modules.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: api_reference.doctree  environment.pickle  example.doctree  getting_started.doctree  index.doctree  modules.doctree  overview.doctree
docs/_modules/: index.html  solar_power_plants.html
docs/_modules/solar_energy_model/: model.html  validator.html
docs/_sources/: api_reference.rst.txt  example.rst.txt  getting_started.rst.txt  index.rst.txt  modules.rst.txt  overview.rst.txt
example/: README.md
solar_energy_model/: constants.py  model.py  validator.py
tests/: input_test.json  output_test.csv  test_01_command_line.py  test_02_payload.py  test_03_execution.py
usecases/: ES41.csv  __init__.py
